--- a/front/src/output.css
+++ b/front/src/output.css
@@ -1121,6 +1121,11 @@ select {
   margin-bottom: auto;
 }
 
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .-mr-2 {
   margin-right: -0.5rem;
 }
