--- a/front/src/output.css
+++ b/front/src/output.css
@@ -965,8 +965,24 @@ select {
   z-index: 50;
 }
 
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
+}
+
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
+
+.col-span-6 {
+  grid-column: span 6 / span 6;
 }
 
 .col-start-1 {
@@ -1015,6 +1031,14 @@ select {
 
 .m-0 {
   margin: 0px;
+}
+
+.m-4 {
+  margin: 1rem;
+}
+
+.m-8 {
+  margin: 2rem;
 }
 
 .m-auto {
@@ -1324,10 +1348,6 @@ select {
   aspect-ratio: 1.33;
 }
 
-.aspect-\[3\.03\] {
-  aspect-ratio: 3.03;
-}
-
 .aspect-square {
   aspect-ratio: 1 / 1;
 }
@@ -1456,6 +1476,10 @@ select {
   height: var(--nextui-divider-weight);
 }
 
+.h-dvh {
+  height: 100dvh;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -1475,10 +1499,6 @@ select {
 
 .max-h-64 {
   max-height: 16rem;
-}
-
-.max-h-\[60vh\] {
-  max-height: 60vh;
 }
 
 .max-h-\[calc\(100\%_-_7\.5rem\)\] {
@@ -1517,10 +1537,6 @@ select {
   min-height: 1.25rem;
 }
 
-.min-h-52 {
-  min-height: 13rem;
-}
-
 .min-h-6 {
   min-height: 1.5rem;
 }
@@ -1531,6 +1547,10 @@ select {
 
 .min-h-8 {
   min-height: 2rem;
+}
+
+.min-h-\[250px\] {
+  min-height: 250px;
 }
 
 .min-h-\[32px\] {
@@ -1623,10 +1643,6 @@ select {
 
 .w-\[23px\] {
   width: 23px;
-}
-
-.w-\[248px\] {
-  width: 248px;
 }
 
 .w-\[51px\] {
@@ -1743,10 +1759,6 @@ select {
   min-width: 1.75rem;
 }
 
-.min-w-72 {
-  min-width: 18rem;
-}
-
 .min-w-8 {
   min-width: 2rem;
 }
@@ -1757,6 +1769,10 @@ select {
 
 .min-w-\[200px\] {
   min-width: 200px;
+}
+
+.min-w-\[73px\] {
+  min-width: 73px;
 }
 
 .min-w-full {
@@ -2111,6 +2127,10 @@ select {
           appearance: none;
 }
 
+.grid-flow-col {
+  grid-auto-flow: column;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -2121,6 +2141,14 @@ select {
 
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-8 {
+  grid-template-columns: repeat(8, minmax(0, 1fr));
 }
 
 .grid-cols-\[auto_1fr\] {
@@ -2193,6 +2221,10 @@ select {
 
 .justify-around {
   justify-content: space-around;
+}
+
+.justify-items-end {
+  justify-items: end;
 }
 
 .\!gap-0 {
@@ -2358,6 +2390,14 @@ select {
 
 .self-stretch {
   align-self: stretch;
+}
+
+.justify-self-start {
+  justify-self: start;
+}
+
+.justify-self-end {
+  justify-self: end;
 }
 
 .justify-self-center {
